@@ -1080,14 +1080,33 @@ block|{
 name|Path
 index|[]
 name|paths
-init|=
+decl_stmt|;
+try|try
+block|{
+name|paths
+operator|=
 name|CombineFileInputFormat
 operator|.
 name|getInputPaths
 argument_list|(
 name|conf
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 name|Path
 index|[]
 name|newPaths
